# bigO

./: ABM_API_CURLS.md  ABM_IMPLEMENTATION_GUIDE.md  ABM_QUICKSTART.md  BACKEND_RUNNING_STATUS.md  CCP_IMPLEMENTATION.md  COMPREHENSIVE_ML_DASHBOARD_ANALYSIS.md  EIGENVECTOR_ZERO_RISK.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LLM_CHATBOT_COMPLETE.md  LLM_QUICKSTART.md  MIGRATION_GUIDE.md  ML_API_INTEGRATION_GUIDE.md  ML_DASHBOARD_IMPLEMENTATION.md  ML_Flow.md  ML_IMPLEMENTATION_SUMMARY.md  ML_INTEGRATION_STATUS.md  ML_RISK_REDUCTION.md  MULTI_SECTOR_SHOCKS.md  NEW_FRONTEND_README.md  PROJECT_STATUS_AND_ROADMAP.md  PS.md  RUN_INSTRUCTIONS.md  SETUP_GUIDE.md  SYSTEM_ARCHITECTURE.md  WEBSOCKET_FEATURE_COMPLETE.md  docker-compose.yml  overview.md  readme.md
backend/: .env.example  .gitignore  DATA_GUIDE.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  ML_QUICKSTART.md  README.md  alembic.ini  dashboard_data.json  install_shap.sh  pyproject.toml  requirements.txt  simulation_output_basic.json  test_eigenvector_zero_risk.py  test_geopolitical_factors.py  test_ml_risk_reduction.py  test_multi_sector_shocks.py  test_stability.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/analytics/: __init__.py  causal_analysis.py  distributions.py  explainability.py  monte_carlo.py  var_calculator.py
backend/app/api/: __init__.py
backend/app/core/: config.py  logging.py
backend/app/db/: __init__.py  base.py  neo4j.py  session.py
backend/app/engine/: __init__.py  agents.py  bayesian.py  contagion.py  game_theory.py  geopolitical_state.py  initial_state_loader.py  nash_solvers.py  network.py  sector_shocks.py  simulation.py  simulation_engine.py  visualization.py
backend/app/ml/: __init__.py  config.py  risk_mitigation.py
backend/app/models/: __init__.py  exposure.py  institution.py  institution_state.py  scenario.py  simulation.py
backend/app/reports/: __init__.py  pdf_generator.py  templates.py
backend/app/schemas/: __init__.py  analytics.py  common.py  exposure.py  institution.py  scenario.py  (+2 more)
backend/ccp_ml/: README.md  __init__.py  api.py  ccp_engine.py  data_loader.py  feature_engineering.py  graph_generator.py  main.py  network_builder.py  realtime_simulation.py  requirements.txt  risk_model.py  simulate.py  spectral_analyzer.py  start_server.bat  start_server.ps1  test_api.py
backend/examples/: abm_example.py  ml_example.py
backend/scripts/: ccp_pipeline.py  clean_rbi_data.py  seed_data.py  test_yfinance.py  train_ml_model.py  train_rbi_data.py  train_with_real_data.py
backend/tests/: __init__.py  conftest.py  test_institutions.py
(+129 files in other folders)
